--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -4,12 +4,17 @@
 #jdbc.username = sa
 #jdbc.password =
 
-#MySql DataBase Configuration
-jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:33060/rankstudio
-jdbc.username = homestead
-jdbc.password = secret
+#MySql DataBase Configuration - Desenv
+#jdbc.driverClassName = com.mysql.jdbc.Driver
+#jdbc.url = jdbc:mysql://localhost:33060/rankstudio
+#jdbc.username = homestead
+#jdbc.password = secret
 
+#MySql DataBase Configuration - Prod
+jdbc.driverClassName = com.mysql.jdbc.Driver
+jdbc.url = jdbc:mysql://us-cdbr-iron-east-05.cleardb.net/heroku_7deecc6c9284999
+jdbc.username = bdf45e6613dd2d
+jdbc.password = 0200c996
 
 hibernate.dialect = org.hibernate.dialect.H2Dialect
 hibernate.show_sql = true
