--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -12,7 +12,7 @@
 
 #MySql DataBase Configuration - Prod
 jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://us-cdbr-iron-east-05.cleardb.net/heroku_7deecc6c9284999
+jdbc.url = jdbc:mysql://us-cdbr-iron-east-05.cleardb.net:3306/heroku_7deecc6c9284999
 jdbc.username = bdf45e6613dd2d
 jdbc.password = 0200c996
 
