Correcao dos parametros de conexao com a base de dados

--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -16,7 +16,7 @@ jdbc.url = jdbc:mysql://us-cdbr-iron-east-05.cleardb.net:3306/heroku_7deecc6c928
 jdbc.username = bdf45e6613dd2d
 jdbc.password = 0200c996
 
-hibernate.dialect = org.hibernate.dialect.H2Dialect
+hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql = true
 hibernate.format_sql = true
 hibernate.hbm2ddl.auto = update
