implementacao do materialize na tela de login e registro

--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -5,16 +5,16 @@
 #jdbc.password =
 
 #MySql DataBase Configuration - Desenv
-jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:33060/rankstudio
-jdbc.username = homestead
-jdbc.password = secret
+#jdbc.driverClassName = com.mysql.jdbc.Driver
+#jdbc.url = jdbc:mysql://localhost:33060/rankstudio
+#jdbc.username = homestead
+#jdbc.password = secret
 
 #MySql DataBase Configuration - Prod
-#jdbc.driverClassName = com.mysql.jdbc.Driver
-#jdbc.url = jdbc:mysql://us-cdbr-iron-east-05.cleardb.net:3306/heroku_7deecc6c9284999
-#jdbc.username = bdf45e6613dd2d
-#jdbc.password = 0200c996
+jdbc.driverClassName = com.mysql.jdbc.Driver
+jdbc.url = jdbc:mysql://us-cdbr-iron-east-05.cleardb.net:3306/heroku_7deecc6c9284999
+jdbc.username = bdf45e6613dd2d
+jdbc.password = 0200c996
 
 hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql = true
