--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
             <artifactId>commons-codec</artifactId>
         </dependency>
 
+        <!-- AWS S3 Client-->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.11.205</version>
+        </dependency>
+
     </dependencies>
 
     <build>
